name:                haskintex
version:             0.7.0.1
synopsis:            Haskell Evaluation inside of LaTeX code.
description:
  The /haskintex/ (Haskell in LaTeX) program is a tool that reads a LaTeX file and evaluates Haskell expressions contained
  in some specific commands and environments. It allows you to define your own functions, use any GHC Haskell language
  extension and, in brief, anything you can do within Haskell.
  Additionally, it is possible to include expressions of 'LaTeX' type (see /HaTeX/ package) and render them as LaTeX code.
  You can freely add any Haskell code you need, and make this code appear /optionally/ in the LaTeX output. It is a tiny program,
  and therefore, easy to understand, use and predict.
  .
  Additions from last version:
  .
  * /haskintex/ is now able to detect that is running on a cabal sandbox, and will use the sandbox package
    db if this is the case. Unless the flag @-nosandbox@ is given, in which case the sandbox will be ignored.
  .
  * New flag @-nosandbox@. Ignore sandbox if /haskintex/ runs on one.
  .
homepage:            http://daniel-diaz.github.io/projects/haskintex
bug-reports:         https://github.com/Daniel-Diaz/haskintex/issues
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          dhelta.diaz@gmail.com
category:            LaTeX
build-type:          Simple
extra-source-files:  README.md
                     -- examples
                     examples/fact.htex
                     examples/hatex.htex
                     examples/sine.htex
                     examples/io.htex
                     examples/pragmas.htex
                     examples/string.htex
                     examples/threaded.htex
                     examples/memo.htex
cabal-version:       >=1.10

executable haskintex
  hs-source-dirs: main
  main-is: Main.hs
  build-depends: base == 4.*
               , haskintex
  default-language: Haskell2010
  ghc-options: -Wall -threaded

library
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
               , transformers >= 0.3.0.0
               , text >= 0.11.2.3 && < 2
               , bytestring >= 0.10.4
               , directory >= 1.2.0 && < 1.4
               , filepath >= 1.1.0 && < 1.5
               , process >= 1.2.0
               , HaTeX >= 3.9.0.0
               , parsec >= 3.1.2
               , hint >= 0.3.3
               , containers >= 0.5.5
               , binary >= 0.7.1
               , haskell-src-exts >= 1.18.2
  exposed-modules: Haskintex
  other-modules: Paths_haskintex
  ghc-options: -Wall
